using newer URL construction method